--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^7.2.0"
+  },
+  "dependencies": {
+    "json-server": "^0.17.0"
   }
 }
